# advent-of-code-2023-python

./: .gitignore  README.md  pyproject.toml  run.py
solutions/day01/: part1.py  part2.py
solutions/day02/: part1.py  part2.py
solutions/day03/: part1.py  part2.py
solutions/day04/: part1.py  part2.py
solutions/day05/: part1.py  part2.py
solutions/day06/: part1.py  part2.py
solutions/day07/: part1.py  part2.py
solutions/day08/: part1.py
solutions/day09/: part1.py  part2.py
