[tool.poetry]
name = "advent-of-code-2023-python"
version = "0.1.0"
description = "Solutions for Advent of Code 2023 in Python."
authors = ["Joshua Spratt <jspratt02@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
